kubernetes/kube-prod-d1/vault/prod-d1/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ingress
  namespace: openbao
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: openbao-prod-d1
    app.kubernetes.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    description: "Ingress for OpenBao application, routing traffic to the OpenBao web service."
spec:
  rules:
    - host: openbao.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-application
                port:
                  name: http
  tls:
    - hosts:
        - openbao.kube-prod-d1.mclacken.net
      secretName: openbao-certificate-secret
